--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: common-page
 index: true
 siteHeadingSmall: "思考のかけら"
-description: "Mensu's Blog concerning what he has learned during programming"
+description: "Jack's Blog concerning what he has learned during programming"
 ---
 
 <!-- index.html starts -->
