change from ubantu

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: common-page
 index: true
-siteHeadingSmall: "思考のかけら"
-description: "JackBtype's Blog concerning what he has learned during programming"
+description: "JackBtype's Blog, funny coding"
 ---
 
 <!-- index.html starts -->
